# matpy

./: CHANGELOG.md  README.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.2.0.md  UPLOAD_NOW.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: _config.yml  api-reference.md  examples.md  index.md  installation.md  tutorials.md
examples/: Vector_example.py  matrix_examples.py  visualization_examples.py
src/matpy/: __init__.py  error.py  version.py
src/matpy/core/: __init__.py  utils.py  validate.py
src/matpy/matrix/: core.py  ops.py  solve.py
src/matpy/vector/: __init__.py  coordinates.py  core.py  ops.py
src/matpy/visualization/: __init__.py  coordinate_plot.py  matrix_plot.py  vector_plot.py
tests/: __init__.py  run_tests.py  test_matrix_core.py  test_matrix_eigenvalues.py  test_matrix_ops.py  test_matrix_solve.py  test_vector_core.py  test_vector_ops.py
